// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-sign-in spec: Render logic -> should render a \`sign in\` form by default 1`] = `
<amplify-sign-in>
  <mock:shadow-root>
    <amplify-form-section headertext="Sign in to your account" testdataprefix="sign-in">
      <div slot="subtitle">
        <slot name="header-subtitle"></slot>
      </div>
      <slot name="federated-buttons">
        <amplify-federated-buttons></amplify-federated-buttons>
      </slot>
      <amplify-auth-fields></amplify-auth-fields>
      <div class="sign-in-form-footer" slot="amplify-form-section-footer">
        <slot name="footer">
          <slot name="secondary-footer-content">
            <span>
              No account?
              <amplify-button data-test="sign-in-create-account-link" variant="anchor">
                Create account
              </amplify-button>
            </span>
          </slot>
          <div>
            <slot name="primary-footer-content">
              <amplify-button data-test="sign-in-sign-in-button" type="submit">
                <span>
                  Sign In
                </span>
              </amplify-button>
            </slot>
          </div>
        </slot>
      </div>
    </amplify-form-section>
  </mock:shadow-root>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withEmptyFederatedObject 1`] = `
<amplify-sign-in>
  <mock:shadow-root>
    <amplify-form-section headertext="Sign in to your account" testdataprefix="sign-in">
      <div slot="subtitle">
        <slot name="header-subtitle"></slot>
      </div>
      <slot name="federated-buttons">
        <amplify-federated-buttons></amplify-federated-buttons>
      </slot>
      <amplify-auth-fields></amplify-auth-fields>
      <div class="sign-in-form-footer" slot="amplify-form-section-footer">
        <slot name="footer">
          <slot name="secondary-footer-content">
            <span>
              No account?
              <amplify-button data-test="sign-in-create-account-link" variant="anchor">
                Create account
              </amplify-button>
            </span>
          </slot>
          <div>
            <slot name="primary-footer-content">
              <amplify-button data-test="sign-in-sign-in-button" type="submit">
                <span>
                  Sign In
                </span>
              </amplify-button>
            </slot>
          </div>
        </slot>
      </div>
    </amplify-form-section>
  </mock:shadow-root>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withFederated 1`] = `
<amplify-sign-in>
  <mock:shadow-root>
    <amplify-form-section headertext="Sign in to your account" testdataprefix="sign-in">
      <div slot="subtitle">
        <slot name="header-subtitle"></slot>
      </div>
      <slot name="federated-buttons">
        <amplify-federated-buttons></amplify-federated-buttons>
      </slot>
      <amplify-strike>
        or
      </amplify-strike>
      <amplify-auth-fields></amplify-auth-fields>
      <div class="sign-in-form-footer" slot="amplify-form-section-footer">
        <slot name="footer">
          <slot name="secondary-footer-content">
            <span>
              No account?
              <amplify-button data-test="sign-in-create-account-link" variant="anchor">
                Create account
              </amplify-button>
            </span>
          </slot>
          <div>
            <slot name="primary-footer-content">
              <amplify-button data-test="sign-in-sign-in-button" type="submit">
                <span>
                  Sign In
                </span>
              </amplify-button>
            </slot>
          </div>
        </slot>
      </div>
    </amplify-form-section>
  </mock:shadow-root>
</amplify-sign-in>
`;
